syntax = "proto3";

package admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "api/admin/v1;v1";


service AdminService {
  rpc Login(LoginReq) returns(LoginReply) {
    option (google.api.http) = {
      post: "/api/v1/login",
      body: "*",
    };
  }

  rpc Logout(LogoutReq) returns(LogoutReply) {
    option (google.api.http) = {
      post: "/api/v1/logout",
      body: "*",
    };
  }

  rpc Register(RegisterReq) returns(RegisterReply) {
    option (google.api.http) = {
      post: "/api/v1/register",
      body: "*",
    };
  }

  rpc ListUser(google.protobuf.Empty) returns(ListUserReply) {
    option (google.api.http) = {
      post: "/api/v1/users",
      body: "*"
    };
  }
}

message User{
  optional uint64 id = 1;
  optional string user_name = 2 [json_name = "user_name"];
  optional string password = 3 [json_name = "password"];
  optional string nick_name = 4 [json_name = "nick_name"];
  optional string email = 5 [json_name = "email"];
  optional string token = 6;
}

message LoginReq {
  User user = 1;
}

message LoginReply {
  uint64 id = 1;
  string token = 2;
}

message LogoutReq {
  uint64 id = 1;
}

message LogoutReply {
  uint64 id = 1;
}

message RegisterReq {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterReply {
  string message = 1;
  string success = 2;
}

message ListUserReply {
  repeated User items = 1;
  int32 total = 2;
}